...
                if !isPresented {
                    viewModel.error = nil
                }
            }
        )) {
            Alert(
                title: Text("Session Error"),
                message: Text(viewModel.error?.localizedDescription ?? "Unknown"),
                dismissButton: .default(Text("OK"), action: { viewModel.error = nil })
            )
        }
    }

...
